# gl_shader_macro

./: Cargo.toml  README.md
src/: lib.rs  templates.rs
