[package]
name = "shader_macro"
version = "0.1.0"
authors = ["DanielKrottendorfer <krotttendorfer@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.48", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0.24"
cgmath = "0.17.0"
procout = "0.1.11"

[lib]
proc-macro = true

[features]
print_output = []
